// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feature Component Renders UI as expected when feature is not selected 1`] = `
<li
  className="feature__item"
>
  <div
    className="feature__option"
    onClick={[Function]}
  >
    17th Generation Intel Core HB (7 Core with donut spare)
    (
    $700.00
    )
  </div>
</li>
`;

exports[`Feature Component Renders UI as expected when feature is selected 1`] = `
<li
  className="feature__item"
>
  <div
    className="feature__option feature__selected"
    onClick={[Function]}
  >
    17th Generation Intel Core HB (7 Core with donut spare)
    (
    $700.00
    )
  </div>
</li>
`;

exports[`Feature Component Renders the UI as expected 1`] = `
<li
  className="feature__item"
>
  <div
    className="feature__option"
    onClick={[Function]}
  >
    17th Generation Intel Core HB (7 Core with donut spare)
    (
    $700.00
    )
  </div>
</li>
`;
